--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 <main mv-app class="talks" mv-plugins="gsheets" mv-storage="https://docs.google.com/spreadsheets/d/11eWRK9F-5PIN1fwTsZgciDz0eUjrgYN4lCfCRqXLob8/edit?usp=drivesdk" mv-storage-sheet="Sheet1" >
 	<h1>[count(event)] elemento </h1>
 	<article mv-multiple property="event" mv-order="desc">	
-		<p property="nombres"></p>
-		<p property="apellidos"></p>
-    <p property="correoElectronico"></p>
-		<p property="edad"></p>
-		<p property="genero"></p>
-		<p property="direccion"></p>
-		<p property="coordenadas"></p>
-		<p property="peticion"></p>
-		<p property="propuesta"></p>
-		<p property="denuncia"></p>
+		<p property="nombredelproducto"></p>
+		<p property="fechadeingreso"></p>
+    <p property="cantidadexistencial"></p>
+		<p property="salida"></p>
+		<p property="entrada"></p>
+		<p property="fechadecaducidad"></p>
+		<p property="personaautorizada"></p>
+		<p property="personalquelorequiere"></p>
+		<p property="productoterminado"></p>
+		<p property="gerenteenturno"></p>
     <p property="consulta"></p>
-    <p property="comentarios"></p>
+    <p p
 	</article>
 </main>
 </body>
